Begin implementing wallcmd command line utility

--- a/WallpainterForm/WallpainterForm.csproj
+++ b/WallpainterForm/WallpainterForm.csproj
@@ -127,6 +127,9 @@
       <Name>Wallpainter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
