--- a/wallcmd/wallcmd.csproj
+++ b/wallcmd/wallcmd.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
